--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,4 +7,4 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-@import '~highlight.js/scss/darcula.scss'
+@import '~highlight.js/scss/solarized-light.scss'
