--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,4 +7,6 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-@import '~highlight.js/scss/solarized-light.scss'
+@import '~highlight.js/scss/solarized-light.scss';
+
+@import "~@fortawesome/fontawesome-free/css/all.css";
