--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,3 +10,5 @@
 @import '~highlight.js/scss/solarized-light.scss';
 
 @import "~@fortawesome/fontawesome-free/css/all.css";
+
+@import "~toastr/toastr.scss";
