--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,8 @@
 
 @import '~highlight.js/scss/solarized-light.scss';
 
-@import "~@fortawesome/fontawesome-free/css/all.css";
+@import "~@fortawesome/fontawesome-free/css/fontawesome.min.css";
+@import "~@fortawesome/fontawesome-free/css/brands.min.css";
+@import "~@fortawesome/fontawesome-free/css/solid.min.css";
 
-@import "~toastr/toastr.scss";
+@import "~toastr/build/toastr.min.css";
