implement postApi modules

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,4 +13,4 @@
 @import "~@fortawesome/fontawesome-free/css/brands.min.css";
 @import "~@fortawesome/fontawesome-free/css/solid.min.css";
 
-@import "~toastr/build/toastr.min.css";
+@import "~toastr/toastr";
